<?xml version="1.0"?>
<package>
  <name>async_port</name>
  <version>0.1.5</version>
  <description>Weston Robot Platform Linux Driver for Asynchronous Port</description>

  <author email="ruixiang.du@westonrobot.com">Ruixiang Du</author>
  <maintainer email="ruixiang.du@westonrobot.com">Ruixiang Du</maintainer>

  <license>BSD</license>

  <url type="website">https://www.westonrobot.com/</url>
  <url type="bugtracker">https://github.com/westonrobot/wrp_sdk/issues</url>
  <url type="repository">https://github.com/westonrobot/wrp_sdk</url>

  <buildtool_depend>catkin</buildtool_depend> 
  <export></export>
</package>
